--- a/src/components/Climate.css
+++ b/src/components/Climate.css
@@ -1,5 +1,6 @@
 .card-container {
     background-color: #A0E7E5;
+    opacity: 75%;
     text-align: center;
     list-style: none;
     width: 300px;
