--- a/src/components/Climate.css
+++ b/src/components/Climate.css
@@ -13,6 +13,11 @@
     justify-content: center;
 }
 
+.btn {
+    margin: 2px;
+    border-radius: 10em;
+}
+
 .card-info {
     display: flex;
     flex-direction: column;
